@@ -393,7 +393,16 @@
       the included routines, just bug fixes).
     }
   }
-
+  \subsection{BUG FIXES}{
+    \itemize{
+      \item \code{update(form, new)} in the case of a long \code{new}
+      formula sometimes wrongly eliminated the intercept from \code{form},
+      or (more rarely) added a garbage term (or seg.faulted !); reported by Mathias Ambühl in
+      \PR{16326}.
+      %% There is *still* a bug left but at least no seg.faulting memory corruption
+      %% Will be ported to .. "patched" once that is fixed ..
+    }
+  }
 }
 
 \section{\Rlogo CHANGES IN R 3.6.2}{
